--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<nav>
 		<ul class="xbox_nav">
-			<li>Pins</li>
+			<li><a href="pins.html">Pins</a></li>
 			<li>Home</li>
 			<li>Friends</li>
 			<li>Games</li>
@@ -29,6 +29,10 @@
 		</ul>
 	</nav>
 
+	<div class="left_page">
+	&nbsp&nbsp&nbsp
+	</div>
+
 	<div class="home_wrapper">
 
 		<div class="left_section">
@@ -36,7 +40,7 @@
 			<ul>
 				<li>Black</li>
 				<li>Tekkon_Black</li>
-				<li><img src="img/points_img.png" class="gamer_points">22320</li>
+				<li><img src="img/points_img.png" class="gamer_points"><sup>22320</sup></li>
 				<li><img src="img/env.png" class="env">1</li>
 			</ul>
 
@@ -60,17 +64,17 @@
 		<div class="bottom_section">
 
 				<div class="bottom_tabs">
-					<div class="blocks" style="background-color:grey">
+					<div class="block1" style="background-color:grey">
 						<div>
 						</div>
 					</div>
-				<div class="blocks">
+				<div class="block2">
 						<div>
 						</div>
 				</div>
-				<div class="blocks">
+				<div class="block3">
 				</div>
-				<div class="blocks" style="background-color:#3399FF">
+				<div class="block4" style="background-color:#3399FF">
 				</div>
 				</div>
 		</div>
@@ -91,8 +95,10 @@
 				</div>
 			
 		</div>
+	</div>
 
-
+	<div class="right_page">
+	&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 	</div>
 
 </body>
