--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 	<nav>
 		<ul class="xbox_nav">
 			<li><a href="pins.html">Pins</a></li>
-			<li>Home</li>
-			<li>Friends</li>
-			<li>Games</li>
-			<li>Tv & Movies</li>
-			<li>Music </li>
-			<li>Apps</li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="friends.html">Friends</a></li>
+			<li><a href="games.html">Games</a></li>
+			<li><a href="movies.html">Tv & Movies</a></li>
+			<li><a href="Music.html">Music</a></li>
+			<li><a href="Apps.html">Apps</a></li>
 		</ul>
 	</nav>
 
@@ -61,11 +61,11 @@
 			</div>
 		</div>
 
-		<div class="bottom_section">
 
 				<div class="bottom_tabs">
-					<div class="block1" style="background-color:grey">
+					<div class="block1" style="background-color: grey;">
 						<div>
+                        
 						</div>
 					</div>
 				<div class="block2">
@@ -77,7 +77,7 @@
 				<div class="block4" style="background-color:#3399FF">
 				</div>
 				</div>
-		</div>
+
 
 		<div class="right_section">
 
